--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,3 @@
 <header class="header">
-  <nav class="header-nav">
-     
-  </nav>
+ <p class="type-comp">hp elitebook 850 g2 i5-5200u fhd tn</p>
 </header>
