--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <body>
     <div class="container">
       @@include('html/header.html', {})
-
+      @@include('html/menu.html', {})
+      @@include('html/home-page.html', {})
     </div>
   </body>
 </html>
