--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -8,9 +8,9 @@
         </a>
        </li> 
       <li>
-        <a href="#about">
+        <a href="#formula">
           <span class="dot"></span>
-          <span class="menu-title">About</span>
+          <span class="menu-title">Формула</span>
           
         </a>
        </li> 
