--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
       @@include('html/header.html', {})
       @@include('html/menu.html', {})
       @@include('html/home-page.html', {})
+      @@include('html/formula.html', {})
     </div>
   </body>
 </html>
