--- a/src/html/formula.html
+++ b/src/html/formula.html
@@ -1,30 +1,30 @@
-<section id="formula" class="all">
-    <main class="wrapper-input">
+<section id="formula" class="formula-all">
+    <main class="formula-wrapper-input">
       <h3>Преобразуем ваши столбцы в строку</h3>
-      <textarea class="input" cols="70" rows="25"></textarea>
-      <div class="control">
-        <button class="transform">Преобразовать</button>
-        <button class="reset">Очистить</button>
+      <textarea class="formula-input" cols="70" rows="25"></textarea>
+      <div class="formula-control">
+        <button class="formula-transform formula-btn">Преобразовать</button>
+        <button class="formula-reset formula-btn">Очистить</button>
       </div>
     </main>
-    <aside class="settings">
-      <h3 class="settings-head">Настройки</h3>
-      <div class="space">
+    <aside class="formula-settings">
+      <h3 class="formula-settings-head">Настройки</h3>
+      <div class="formula-space">
         <input type="checkbox" id="space" name="space" checked />
         <label for="space">Добавлять пробел</label>
       </div>
       <div class="separator">
         <h4>Выбор разделителя</h4>
-        <select class="separator-select">
+        <select class="formula-separator-select">
           <option value="," selected>запятая (,)</option>
           <option value=".">точка (.)</option>
           <option value=";">точка с запятой (;)</option>
           <option value=":">двоеточие (:)</option>
         </select>
       </div>
-      <div class="wrapper">
+      <div class="formula-wrapper">
         <h4>Обернуть каждый элемент</h4>
-        <select class="wrapper-select">
+        <select class="formula-wrapper-select">
           <option value="" selected>не оборачивать</option>
           <option value="'">одиночная кавычка (')</option>
           <option value="&quot">двойная кавычка (")</option>
