--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
   @@include('html/head.html', { "title":"Home Page" })
   <body>
     <div class="container">
-      @@include('html/header.html', {})
       @@include('html/menu.html', {})
       @@include('html/home-page.html', {})
       @@include('html/formula.html', {})
+      @@include('html/work.html', {})
+      @@include('html/front.html', {})
+      @@include('html/other.html', {})
     </div>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
